bug-fix: z-index causing the link to be unclickable

--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -4,7 +4,7 @@
     color: #333;
     position: sticky;
     top: 0;
-    /* z-index: 500; */
+    z-index: 5;
     background: white;
 }
 
